rewrite sone modules

--- a/config/locales/models/user/en.yml
+++ b/config/locales/models/user/en.yml
@@ -5,4 +5,5 @@ en:
         user:
           attributes:
             birthday:
+              before: "must be at least 16 years ago"
               invalid_date: "must be at least 16 years ago"
